force-app/src/objects/ffct__MigrationRuleValue__c.object
<CustomObject>
    <customHelpPage>ffct__migrationsetonlinehelp</customHelpPage>
    <description>Holds the value for the Migration Rule.</description>
    <fields>
        <fullName>ffct__MigrationRule__c</fullName>
        <description>Holds the associated Migration Rule.</description>
        <label>Migration Rule</label>
        <referenceTo>ffct__MigrationRule__c</referenceTo>
        <relationshipLabel>Migration Rule Values</relationshipLabel>
        <relationshipName>MigrationRuleValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffct__Type__c</fullName>
        <description>Holds the Type of value.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CustomObject</fullName>
                </value>
                <value>
                    <fullName>Metadata</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__Value__c</fullName>
        <description>Holds the value for the Migration Rule.</description>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Migration Rule Value</label>
    <nameField>
        <displayFormat>MRV-{000000}</displayFormat>
        <label>Migration Rule Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Rule Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>